<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>io.github.nhtuan10</groupId>
        <artifactId>my-kafka-tool</artifactId>
        <version>0.1.1-SNAPSHOT</version>
    </parent>

    <artifactId>my-kafka-tool-ext</artifactId>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <!--    <repositories>-->
    <!--        <repository>-->
    <!--            <id>confluent</id>-->
    <!--            <url>https://packages.confluent.io/maven</url>-->
    <!--        </repository>-->
    <!--    </repositories>-->
    <dependencies>
        <dependency>
            <groupId>io.github.nhtuan10</groupId>
            <artifactId>my-kafka-tool-api</artifactId>
            <version>${my-kafka-tool.version}</version>
        </dependency>
        <!--        <dependency>-->
        <!--            <groupId>io.confluent</groupId>-->
        <!--            <artifactId>kafka-avro-serializer</artifactId>-->
        <!--            <version>7.9.0</version>-->
        <!--        </dependency>-->
        <dependency>
            <groupId>io.github.nhtuan10</groupId>
            <artifactId>modular-api</artifactId>
            <version>${modular.version}</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.5.18</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <encoding>UTF-8</encoding>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>